--- a/index.html
+++ b/index.html
@@ -2,42 +2,135 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>
-            Minha página
-        </title>
+        <title>Minha página</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
         <nav>
             <p>Minha página</p>
             <ul>
-                <li>Serviços</li>
-                <li>Clientes</li>
-                <li>Parceiros</li>
-                <li>Time</li>
-                <li>Contato</li>
+                <li>
+                    <a href="#servicos">SERVIÇOS</a>
+                </li>
+                <li>
+                    <a href="#clientes">CLIENTES</a>
+                </li>
+                <li>
+                    <a href="#parceiros">PARCEIROS</a>
+                </li>
+                <li>
+                    <a href="#time">TIME</a>
+                </li>
+                <li>
+                    <a href="#contato">CONTATO</a>
+                </li>
             </ul>
         </nav>
+
         <header>
-            <h1>
-                Minha página
-            </h1>
+            <h1>Minha página</h1>
             <p>
-                Oferecemos o desenvolvimento dos melhores sites e apps para a sua empresa
+                Oferecemos o desenvolvimento dos 
+                melhores sites e apps para sua empresa
             </p>
         </header>
+
         <section id="servicos">
-            <h2>
-                Serviços
-            </h2>
-            <p> Oferecemos o desenvolvimento dos melhores sites e apps
-                 para a sua empresa
+            <h2>SERVIÇOS</h2>
+            <p>
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
+                Oferecemos os melhores serviços em 
+                desenvolvimento de sites e aplicativos
             </p>
+            <div>
+                <img src="img/site.jpg" class="img_padrao">
+            </div>
+            <div>
+                <img src="img/app.jpeg" class="img_padrao">
+            </div>
         </section>
-        
+
+        <section id="clientes">
+            <h2>CLIENTES</h2>
+            <p>Nossos clientes ficaram muito satisfeitos com o nosso serviço</p>
+            <div>
+                <img src="img/cliente1.jpg" class="img_padrao">
+            </div>        
+            <div>
+                <img src="img/cliente2.jpg" class="img_padrao">
+            </div>            
+        </section>
+
+        <section id="parceiros">
+            <h2>PARCEIROS</h2>
+            <p>
+                Nossos parceiros nos ajudam a entregar as melhores
+                soluções para nossos clientes
+            </p>
+            <div>
+                <a href="https://www.academiapme.com.br/" target="_blank">
+                    <img src="img/academiapme.png" width="130px">
+                </a>
+            </div>
+            <div>
+                <a href="https://digitalinnovation.one/" target="_blank">
+                    <img src="img/digital_innovation_one.png" width="130px">
+                </a>
+            </div>
+        </section>
+
+        <section id="time">
+            <h2>TIME</h2>
+            <P>
+                Nosso time trabalha com muita qualidade e empenho para entregar 
+                o melhor produto para nossos clientes
+            </P>
+            <div>
+                <img src="img/time.jpeg" width="300px" class="img_padrao">
+            </div>
+            <div>
+                <img src="img/time2.jpeg" width="300px" class="img_padrao">
+            </div>
+        </section>
+
+        <section id="contato">
+            <h2>CONTATO</h2>
+            <p>
+                Entre em contato com nossa equipe
+            </p>
+            <div>
+                <img src="img/email.png" class="logo">
+                <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
+            </div>
+            <div>
+                <img src="img/fone.png" class="logo">
+                <p><a href="tel:9999999999">(99) 9999-9999</a></p>
+            </div>
+        </section>
+
         <footer>
-            Desenvolvido por Paulo Bacalhau...
-        </footer>
+            <p>Desenvolvido por Rafael Galleani</p>
+        </footer>            
     </body>
 
 </html>
